2007-05-07 Tim
 Rename function setVersion() to setTab().
  Web: page.inc
 Fix wrong tab from WinMerge 2.2 download page.
  Web\2.2: downloads.php
 Fix the double "This is an old version" info for WinMerge 2.2 amd 2.4.
  Web\2.2: downloads.php
  Web\2.4: downloads.php

2007-04-25 Tim
 RFE: [ 1700099 ] Web: Mailing list page?
  Web: page.inc sitemap.txt
  Web\support: new file mailing-lists.php

2007-04-14 Tim
 PATCH: [ 1700349 ] Web: Move developers area to Wiki
  Web: .htaccess index.php page.inc sitemap.txt
  Web\developer: deleted *.*

2007-04-11 Tim
 PATCH: [ 1697984 ] Web: Move tracker shortcuts creator to support
  Web: .htaccess sitemap.txt
  Web\developer: deleted tracker-shortcuts.php
  Web\support: new file tracker-shortcuts.php

2007-04-02 Tim
 PATCH: [ 1692305 ] Known limitation: VSS integration cannot add new files
  Web\2.6: limitations.php

2007-03-31 Tim
 PATCH: [ 1691700 ] Web: Changes for new stable release 2.6.6
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2007-03-18 Tim
 Redirect translations status page to Wiki.
  Web: .htaccess

2007-03-20 Tim
 PATCH: [ 1680165 ] Known issue: unset WinMerge integration from ClearCase
  Web\2.6: limitations.php

2007-03-13 Tim
 PATCH: [ 1679324 ] Web: Add "Wiki" tab
  Web: page.inc

2007-01-24 Tim
 PATCH: [ 1637155 ] Web: Move "Support" to own tab
  Web: index.php page.inc sitemap.txt
  Web\1.7: index.php
  Web\2.*: index.php
  Web\css: all.css
  Web\support: new file index.php

2007-01-21 Tim
 PATCH: [ 1640934 ] Web: Centralize "This is an old version" info
  Web: page.inc
  Web\1.7: index.php
  Web\2.0: index.php
  Web\2.2: index.php
  Web\2.4: index.php
 PATCH: [ 1630335 ] Web: Update features list in main page
  Web: index.php
  Web\2.6: index.php

2007-01-18 Tim
 PATCH: [ 1638998 ] Web: Changes for new stable release 2.6.4
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2006-12-23 Tim
 Fix two invalid links.