@@ -2,7 +2,7 @@
   include('page.inc');
 
   $page = new Page;
-  $page->printHead('WinMerge', WINMERGE_USR);
+  $page->printHead('WinMerge', TAB_HOME);
 ?>
 <p>WinMerge is an Open Source visual text file differencing and merging tool for Win32 platforms. It is highly useful for determing what has changed between project versions, and then merging changes between versions.</p>
 <h2>Features</h2>
